# retivasc

./: .gitignore  FEATURE_ROADMAP.md  README.md  pixi.toml  pyproject.toml  retivasc_development_handoff.md
data/: README.md
docs/: data_audit_flow.html  index.html  rose_mask_embedding_interpretation.md
notebooks/: 00_data_flow_tutorial.py  01_rose_octa_feature_demo.py  02_fives_modeling_calibration_demo.py  03_pi_demo_report.py  04_rose_layer_aware_feature_statistics.py  04_rose_mask_embeddings.py
reports/: AUDIT.md  data_audit_flow.html  fives_feature_summary.json  fives_metrics.json  retivasc_pi_demo.html
src/retivasc/: __init__.py  artifacts.py  deep_models.py  embeddings.py  evaluation.py  feature_metadata.py  features.py  features_fives.py  features_rose.py  io.py  layer_contrasts.py  metrics.py  outliers.py  plots_effects.py  plots_embeddings.py  plotting.py  preprocess.py  report_html.py  report_text.py  segment.py  skeleton.py  splits.py  stats.py  vascular_avr.py
tests/: test_artifact_audit.py  test_caliber.py  test_crossings.py  test_deep_models.py  test_embeddings.py  test_evaluation.py  test_external_adapters.py  test_feature_metadata.py  test_features.py  test_features_fives.py  test_features_rose.py  test_io.py  test_layer_contrasts.py  test_metrics.py  test_outliers.py  test_plots_effects.py  test_plots_embeddings.py  test_plotting.py  test_report_html.py  test_segment.py  test_splits.py  test_stats.py  test_tortuosity_burden.py  test_vascular_avr.py
