[project]
name = "retivasc"
version = "0.1.0"
description = "Demo-sized retinal vascular computer-vision prototype."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "retivasc contributors" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

